--- a/index.html
+++ b/index.html
@@ -44,59 +44,60 @@
             </div>
         </div>
     </header>
-
-    <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
-            <div class="slide-button">
-                <a href="#">
-                    <p>read more</p>
-                </a>
+    <div id="main-slide">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
+                <div class="slide-button">
+                    <a href="#">
+                        <p>read more</p>
+                    </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
+                <div class="slide-button">
+                    <a href="#">
+                        <p>read more</p>
+                    </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
+                <div class="slide-button">
+                    <a href="#">
+                        <p>read more</p>
+                    </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
+                <div class="slide-button">
+                    <a href="#">
+                        <p>read more</p>
+                    </a>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
+                <div class="slide-button">
+                    <a href="#">
+                        <p>read more</p>
+                    </a>
+                </div>
+              </div>
             </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-scrollbar"></div>
           </div>
-          <div class="swiper-slide">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
-            <div class="slide-button">
-                <a href="#">
-                    <p>read more</p>
-                </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
-            <div class="slide-button">
-                <a href="#">
-                    <p>read more</p>
-                </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
-            <div class="slide-button">
-                <a href="#">
-                    <p>read more</p>
-                </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <h2>Lorem ipsum</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, tempora consequuntur facere.</p>
-            <div class="slide-button">
-                <a href="#">
-                    <p>read more</p>
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-scrollbar"></div>
-      </div>
+    </div>
       <div id="content1">
         <div id="content1-gnb">
             <ul>
