--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>태풍가구</title>
     <link rel="stylesheet" href="./css/initial.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/swiper.css">
     <link rel="stylesheet" href="./css/stlye.css">
 </head>
 <body>
