--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
                             <h3>MAIN TITLE</h3>
                             <p>00,000&#8361;</p>
                         </div>
-                        <div class="color"></div>
+                        <div class="color">
+                            <a href="#"><img src="./img/main-page/section2/color-n.png" alt="네츄럴"></a>
+                            <a href="#"><img src="./img/main-page/section2/color-w.png" alt="월넛"></a>
+                        </div>
                     </a>
                 </li>
                 <li>
@@ -156,7 +159,10 @@
                             <h3>MAIN TITLE</h3>
                             <p>00,000&#8361;</p>
                         </div>
-                        <div class="color"></div>
+                        <div class="color">
+                            <a href="#"><img src="./img/main-page/section2/color-n.png" alt="네츄럴"></a>
+                            <a href="#"><img src="./img/main-page/section2/color-w.png" alt="월넛"></a>
+                        </div>
                     </a>
                 </li>
                 <li>
@@ -166,7 +172,10 @@
                             <h3>MAIN TITLE</h3>
                             <p>00,000&#8361;</p>
                         </div>
-                        <div class="color"></div>
+                        <div class="color">
+                            <a href="#"><img src="./img/main-page/section2/color-n.png" alt="네츄럴"></a>
+                            <a href="#"><img src="./img/main-page/section2/color-w.png" alt="월넛"></a>
+                        </div>
                     </a>
                 </li>
                 <li>
@@ -176,7 +185,10 @@
                             <h3>MAIN TITLE</h3>
                             <p>00,000&#8361;</p>
                         </div>
-                        <div class="color"></div>
+                        <div class="color">
+                            <a href="#"><img src="./img/main-page/section2/color-n.png" alt="네츄럴"></a>
+                            <a href="#"><img src="./img/main-page/section2/color-w.png" alt="월넛"></a>
+                        </div>
                     </a>
                 </ul>
                 </li>
@@ -270,8 +282,10 @@
                         <img src="./img/main-page/section4/inast.png" alt="인스타로고">
                     </div>
                     <div class="content4-title-wrap">
-                        <img src="./img/main-page/section4/insta-pro.png" alt="프로필">
-                        <p>@Lorem ipsum</p>
+                        <a href="#">
+                            <img src="./img/main-page/section4/insta-pro.png" alt="프로필">
+                            <p>@Lorem ipsum</p>
+                        </a>
                     </div>
                     <p>Lorem ipsum dolor sit amet <br> 
                         consectetur adipisicing elit. Ut, iure.</p>
@@ -290,7 +304,18 @@
                 </div>
             </div>
         </div>
-
+        <div id="footer-banner">
+            <div class="footer-banner-inner">
+                <p>lorem ipsum</p>
+            </div>
+        </div>
+        <footer>
+            <div class="content-wrap">
+                <div class="footer-inner"></div>
+                <div class="footer-inner"></div>
+                <div class="footer-inner"></div>
+            </div>
+        </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script>
